# ros2_src

./: README.md  warnings  yolov11_predict.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custom_interfaces/share/custom_interfaces/: package.dsv  package.ps1  package.sh
install/hello_ev_interfaces/share/hello_ev_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hello_ev_service_py/lib/hello_ev_service_py/: hello_ev_client  hello_ev_server
install/hello_ev_service_py/share/hello_ev_service_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/underwater_control/lib/underwater_control/: camera_publisher  control_client  image_processor  serial_comm_node
install/underwater_control/share/underwater_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/custom_interfaces/: CMakeLists.txt
src/hello_ev_interfaces/: CMakeLists.txt
src/hello_ev_service_py/: setup.cfg  setup.py
src/hello_ev_service_py/hello_ev_service_py/: hello_ev_server.py
src/underwater_control/: package.xml  setup.cfg  setup.py
src/underwater_control/launch/: underwater_vision.launch.py
src/underwater_control/underwater_control/: serial_comm_node.py
src/uuv_webrtc_ros/: package.xml  setup.cfg  setup.py
src/uuv_webrtc_ros/launch/: yolov11_detection.launch.py
src/uuv_webrtc_ros/uuv_webrtc_ros/: image_publisher.py  image_subscriber.py  yolov5_detector.py
(+37 files in other folders)
